Fix z-index on ch-window

--- a/src/components/window/ch-window.scss
+++ b/src/components/window/ch-window.scss
@@ -18,6 +18,7 @@
     left: 0;
     align-items: center;
     justify-content: center;
+    z-index: 1000;
 }
 
 .window {
